# flask-celery-project

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.tx  requirements.txt
.env/: .dev-sample
compose/: auto_deploy_do.sh
compose/local/flask/: Dockerfile  entrypoint  start
compose/production/flask/celery/beat/: start
compose/production/flask/celery/flower/: start
migrations/versions/: aca43456699e_initial_migration.py  e500b20cc035_.py
project/: __init__.py  celery_utils.py  config.py
project/tdd/: __init__.py  views.py
project/users/: __init__.py  events.py  factories.py  models.py  tasks.py  views.py
project/users/templates/: form.html  form_ws.html  member_signup.html  user_subscribe.html
tests/: conftest.py  test_celery_utils.py
tests/tdd/: test_model.py  test_views.py
tests/users/: test_tasks.py  test_views.py
